--- a/deployment/demo/values.yaml
+++ b/deployment/demo/values.yaml
@@ -43,10 +43,10 @@ dockerImage: ghcr.io/pixelaw/core:latest
 worldAddress: "0x47864d08a1b86cf0dd52ea2785f8bc93b5f48edca8380bbb3057d158521e12d"
 
 webapp:
-  katanaUrl: "https://api.cartridge.gg/x/pixelaw1/katana"
-  toriiUrl: "https://api.cartridge.gg/x/pixelaw1/torii"
-  katanaSlotUrl: "https://api.cartridge.gg/x/pixelaw1/katana"
-  toriiSlotUrl: "https://api.cartridge.gg/x/pixelaw1/torii"
+  katanaUrl: "https://api.cartridge.gg/x/pixelaw/katana"
+  toriiUrl: "https://api.cartridge.gg/x/pixelaw/torii"
+  katanaSlotUrl: "https://api.cartridge.gg/x/pixelaw/katana"
+  toriiSlotUrl: "https://api.cartridge.gg/x/pixelaw/torii"
   seed: "7380699824140797174"
   totalAccounts: "4"
 
