Adding app version to webapp context

--- a/deployment/demo/templates/deployment.yaml
+++ b/deployment/demo/templates/deployment.yaml
@@ -23,6 +23,8 @@ spec:
         ports:
         - containerPort: {{ .Values.webappContainerService.port }}
         env:
+        - name: CORE_VERSION
+          value: "{{ .Chart.AppVersion }}"
         - name: PUBLIC_NODE_URL
           value: "{{ .Values.webapp.katanaUrl }}"
         - name: PUBLIC_TORII
