--- a/deployment/demo/values.yaml
+++ b/deployment/demo/values.yaml
@@ -40,13 +40,13 @@ subDomainName:
 
 dockerImage: ghcr.io/pixelaw/core:latest
 
-worldAddress: "0x47864d08a1b86cf0dd52ea2785f8bc93b5f48edca8380bbb3057d158521e12d"
+worldAddress: "0x51ee3a738cbe090c95eb8102427ffb31b796be7395968cdda70cbfdd675e65a"
 
 webapp:
-  katanaUrl: "https://api.cartridge.gg/x/pixelaw/katana"
-  toriiUrl: "https://api.cartridge.gg/x/pixelaw/torii"
-  katanaSlotUrl: "https://api.cartridge.gg/x/pixelaw/katana"
-  toriiSlotUrl: "https://api.cartridge.gg/x/pixelaw/torii"
-  seed: "7380699824140797174"
+  katanaUrl: "https://api.cartridge.gg/x/pixelaw-demo/katana"
+  toriiUrl: "https://api.cartridge.gg/x/pixelaw-demo/torii"
+  katanaSlotUrl: "https://api.cartridge.gg/x/pixelaw-demo/katana"
+  toriiSlotUrl: "https://api.cartridge.gg/x/pixelaw-demo/torii"
+  seed: "12551975208350626939"
   totalAccounts: "4"
 
