wip: slot deploy

--- a/contracts/Scarb.toml
+++ b/contracts/Scarb.toml
@@ -21,6 +21,7 @@ initializer_class_hash = "0xbeef"
 [scripts]
 init_auth = "./scripts/init_auth.sh"
 slot_post_deploy = "./scripts/update_scarb.sh &&  ./scripts/init_auth.sh"
+slot_deploy = "bash ./scripts/slot_deploy.sh"
 post_deploy = "./scripts/update_scarb.sh && ./scripts/update_accounts.sh &&  ./scripts/init_auth.sh && bash ./scripts/upload_manifest.sh"
 post_deploy_mac = "./scripts/update_scarb_mac.sh && ./scripts/update_accounts.sh &&  ./scripts/init_auth.sh"
 deploy = "sozo build &&  sozo migrate --name pixelaw && ./scripts/update_scarb.sh && ./scripts/update_accounts.sh && ./scripts/init_auth.sh"
