--- a/web/package.json
+++ b/web/package.json
@@ -10,16 +10,17 @@
     "codegen": "graphql-codegen",
     "fix-codegen": "node src/fixGeneratedGraphql.cjs",
     "postinstall": "patch-package",
-    "create-components": "npx @dojoengine/core ../contracts/target/dev/manifest.json src/dojo/contractComponents.ts http://localhost:5050 0x72025860d14238aa9fe95c5657e130155518d9d1e8eaef1e174ef4b40972720"
+    "create-components": "npx @dojoengine/core ../contracts/target/dev/manifest.json src/dojo/contractComponents.ts http://localhost:5050 0x47864d08a1b86cf0dd52ea2785f8bc93b5f48edca8380bbb3057d158521e12d"
   },
   "dependencies": {
-    "@dojoengine/core": "^0.1.30",
-    "@dojoengine/create-burner": "^0.1.60",
-    "@dojoengine/react": "^0.0.3",
-    "@dojoengine/utils": "^0.1.27",
-    "@latticexyz/react": "^1.43.0",
-    "@latticexyz/recs": "^1.43.0",
-    "@latticexyz/utils": "^1.43.0",
+    "@dojoengine/core": "^0.2.9",
+    "@dojoengine/create-burner": "^0.2.9",
+    "@dojoengine/react": "^0.2.9",
+    "@dojoengine/utils": "^0.2.9",
+    "@dojoengine/recs": "0.1.35",
+    "@latticexyz/react": "^2.0.0-next.11",
+    "@latticexyz/recs": "^2.0.0-next.11",
+    "@latticexyz/utils": "^2.0.0-next.11",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-select": "^2.0.0",
@@ -48,7 +49,8 @@
     "rxjs": "^7.8.1",
     "starknet": "^5.19.5",
     "tailwind-merge": "^1.14.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "vite-plugin-wasm": "^3.3.0"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^5.0.0",
