--- a/web/package.json
+++ b/web/package.json
@@ -50,7 +50,8 @@
     "starknet": "^5.19.5",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
-    "vite-plugin-wasm": "^3.3.0"
+    "vite-plugin-wasm": "^3.3.0",
+    "vite-plugin-top-level-await": "^1.3.1"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^5.0.0",
