--- a/web/package.json
+++ b/web/package.json
@@ -15,11 +15,11 @@
   "dependencies": {
     "@dojoengine/core": "^0.5.0",
     "@dojoengine/create-burner": "^0.5.0",
+    "@dojoengine/react": "^0.5.0",
+    "@dojoengine/recs": "0.1.35",
+    "@dojoengine/state": "^0.5.0",
     "@dojoengine/torii-client": "^0.5.0",
     "@dojoengine/utils": "^0.5.0",
-    "@dojoengine/react": "^0.5.0",
-    "@dojoengine/state": "^0.5.0",
-    "@dojoengine/recs": "0.1.35",
     "@latticexyz/react": "^2.0.0-next.11",
     "@latticexyz/utils": "^2.0.0-next.11",
     "@radix-ui/react-dialog": "^1.0.5",
@@ -51,8 +51,8 @@
     "starknet": "^5.19.5",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
-    "vite-plugin-wasm": "^3.3.0",
-    "vite-plugin-top-level-await": "^1.3.1"
+    "vite-plugin-top-level-await": "^1.3.1",
+    "vite-plugin-wasm": "^3.3.0"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^5.0.0",
