--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,10 @@ services:
       - "127.0.0.1:3000:3000"
       - "127.0.0.1:5050:5050"
       - "127.0.0.1:8080:8080"
+      - "127.0.0.1:9090:9090/tcp"
+      - "127.0.0.1:9090:9090/udp"
+      - "127.0.0.1:9091:9091/tcp"
+      - "127.0.0.1:9091:9091/udp"
     restart: unless-stopped
     volumes:
       - ./contracts/genesis_template.json:/keiko/config/genesis.json
@@ -18,6 +22,7 @@ services:
     environment:
       - PUBLIC_NODE_URL=http://localhost:5050
       - PUBLIC_TORII=http://localhost:8080
+      - RUST_LOG=info
 
 networks:
   pixelaw:
