--- a/web/package.json
+++ b/web/package.json
@@ -4,13 +4,12 @@
   "type": "module",
   "license": "MIT",
   "scripts": {
-    "dev": "PUBLIC_NODE_URL=http://localhost:5050 PUBLIC_TORII=http://localhost:8080 vite",
+    "dev": "rm -rf node_modules/.vite && PUBLIC_NODE_URL=http://localhost:5050 PUBLIC_TORII=http://localhost:8080 vite",
     "build": "tsc && vite build",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "codegen": "graphql-codegen",
     "fix-codegen": "node src/fixGeneratedGraphql.cjs",
-    "postinstall": "patch-package",
     "create-components": "npx @dojoengine/core ../contracts/target/dev/manifest.json src/dojo/contractComponents.ts http://localhost:5050 0x47864d08a1b86cf0dd52ea2785f8bc93b5f48edca8380bbb3057d158521e12d"
   },
   "dependencies": {
@@ -29,13 +28,13 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
     "@tanstack/react-query": "^5.0.0",
-    "@types/lodash": "^4.14.200",
-    "@types/react-color": "^3.0.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "dotenv": "^16.4.5",
     "events": "^3.3.0",
     "graphql": "^16.8.1",
     "graphql-request": "^6.1.0",
+    "graphql-tag": "^2.12.6",
     "graphql-ws": "^5.14.2",
     "jotai": "^2.4.3",
     "lodash": "^4.17.21",
@@ -52,10 +51,13 @@
     "starknet": "^5.19.5",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
+    "type-fest": "^2.14.0",
     "vite-plugin-top-level-await": "^1.3.1",
     "vite-plugin-wasm": "^3.3.0"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.200",
+    "@types/react-color": "^3.0.7",
     "@graphql-codegen/cli": "^5.0.0",
     "@graphql-codegen/typescript": "^4.0.1",
     "@graphql-codegen/typescript-graphql-request": "^6.0.0",
@@ -72,7 +74,6 @@
     "eslint": "^8.51.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
-    "patch-package": "^8.0.0",
     "postcss": "^8.4.31",
     "postinstall-postinstall": "^2.1.0",
     "tailwindcss": "^3.3.3",
