--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,7 +23,8 @@ services:
       - PUBLIC_NODE_URL=http://localhost:5050
       - PUBLIC_TORII=http://localhost:8080
       - RUST_LOG=info
-
+      - DISABLE_VALIDATE=true
+      - DISABLE_FEE=true
 networks:
   pixelaw:
     driver: bridge
