no katanarpc for torii in supervisord

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -13,7 +13,7 @@ stdout_logfile=%(ENV_KATANA_LOG)s
 stdout_logfile_maxbytes=0
 
 [program:torii]
-command=torii --world %(ENV_WORLD_ADDRESS)s --rpc %(ENV_STARKNET_RPC)s --database %(ENV_TORII_DB)s --events-chunk-size 10000 --allowed-origins "*"
+command=torii --world %(ENV_WORLD_ADDRESS)s --database %(ENV_TORII_DB)s --events-chunk-size 10000 --allowed-origins "*"
 redirect_stderr=true
 stdout_logfile=%(ENV_TORII_LOG)s
 stdout_logfile_maxbytes=0
