--- a/docker/supervisord.conf
+++ b/docker/supervisord.conf
@@ -7,19 +7,19 @@ pidfile=/pixelaw/supervisord.pid
 
 
 [program:katana]
-command=katana --genesis %(ENV_GENESIS)s --invoke-max-steps 4294967295 --disable-fee --disable-validate --json-log --block-time 2000 --db-dir %(ENV_KATANA_DB)s --allowed-origins "*"
+command=/pixelaw/scripts/katana_start.sh
 redirect_stderr=true
 stdout_logfile=%(ENV_KATANA_LOG)s
 stdout_logfile_maxbytes=0
 
 [program:torii]
-command=torii --world %(ENV_WORLD_ADDRESS)s --database %(ENV_TORII_DB)s --events-chunk-size 10000 --allowed-origins "*"
+command=/pixelaw/scripts/torii_start.sh
 redirect_stderr=true
 stdout_logfile=%(ENV_TORII_LOG)s
 stdout_logfile_maxbytes=0
 
 [program:server]
-command=yarn --cwd /pixelaw/server server
+command=/pixelaw/scripts/server_start.sh
 redirect_stderr=true
 stdout_logfile=%(ENV_SERVER_LOG)s
 stdout_logfile_maxbytes=0
