Update dojo and dojo_plugin versions, refactor contract methods to use `ref world`, comment out modules, and apply `#[dojo::model]` attribute to models

--- a/contracts/Scarb.toml
+++ b/contracts/Scarb.toml
@@ -11,7 +11,7 @@ homepage = "https://github.com/pixelaw/core"
 sierra-replace-ids = true
 
 [dependencies]
-dojo = { git = "https://github.com/dojoengine/dojo", tag = "v0.7.0-alpha.2" }
+dojo = { git = "https://github.com/dojoengine/dojo", tag = "v0.7.3" }
 
 [[target.dojo]]
 build-external-contracts = []
