fix: lib config so that other app can use pixelaw as dependencies

--- a/contracts/Scarb.toml
+++ b/contracts/Scarb.toml
@@ -3,9 +3,7 @@ cairo-version = "=2.7.0-rc.3"
 name = "pixelaw"
 version = "0.0.0"
 homepage = "https://github.com/pixelaw/core"
-# Use the prelude with the less imports as possible
-# from corelib.
-#edition = "2024_07"
+
 
 [cairo]
 sierra-replace-ids = true
@@ -13,10 +11,9 @@ sierra-replace-ids = true
 [dependencies]
 dojo = { git = "https://github.com/dojoengine/dojo", tag = "v1.0.0-alpha.4" }
 
-[[target.dojo]]
-build-external-contracts = []
-
-#[lib]
+[lib]
+name = "pixelaw"
+path = "src/lib.cairo"
 
 [tool.dojo]
 initializer_class_hash = "0xbeef"
