--- a/contracts/.vscode/settings.json
+++ b/contracts/.vscode/settings.json
@@ -1,2 +1,6 @@
 {
+  "cairo1.enableLanguageServer": true,
+  "cairo1.languageServerPath": "~/.asdf/shims/dojo-language-server",
+  "cairo1.enableScarb": true,
+  "cairo1.scarbPath": "~/.asdf/shims/scarb"
 }
