--- a/contracts/Scarb.toml
+++ b/contracts/Scarb.toml
@@ -3,7 +3,9 @@ cairo-version = "=2.7.0-rc.3"
 name = "pixelaw"
 version = "0.3.35"
 homepage = "https://github.com/pixelaw/core"
-
+# Use the prelude with the less imports as possible
+# from corelib.
+# edition = "2024_07"
 
 [cairo]
 sierra-replace-ids = true
