fixing core build

--- a/contracts/Scarb.toml
+++ b/contracts/Scarb.toml
@@ -17,6 +17,10 @@ dojo = { git = "https://github.com/dojoengine/dojo", tag = "v1.0.0-alpha.4" }
 name = "pixelaw"
 path = "src/lib.cairo"
 
+[[target.dojo]]
+build-external-contracts = [  ]
+
+
 [tool.dojo]
 initializer_class_hash = "0xbeef"
 
