--- a/.github/workflows/ci-contracts.yml
+++ b/.github/workflows/ci-contracts.yml
@@ -22,7 +22,7 @@ jobs:
       - run: curl -L https://install.dojoengine.org | bash
       - run: /home/runner/.config/.dojo/bin/dojoup -v v0.7.0-alpha.4
       - run: |
-          scarb fmt --check
+          /home/runner/.config/.dojo/bin/scarb fmt --check
           /home/runner/.config/.dojo/bin/sozo test
           /home/runner/.config/.dojo/bin/sozo build
           if [[ `git status --porcelain` ]]; then
