--- a/.github/workflows/ci-contracts.yml
+++ b/.github/workflows/ci-contracts.yml
@@ -24,17 +24,32 @@ jobs:
           scarb-version: "2.7.0"
       - run: |
           scarb fmt --check
-  sozo-test:
-    runs-on: ubuntu-latest
+  build:
+    runs-on: ubuntu-latest-4-cores
     steps:
       - uses: actions/checkout@v3
-      - run: curl -L https://install.dojoengine.org | bash
-      - run: /home/runner/.config/.dojo/bin/dojoup -v v0.7.0-alpha.4
+      - uses: Swatinem/rust-cache@v2
       - run: |
-          /home/runner/.config/.dojo/bin/sozo test
-          /home/runner/.config/.dojo/bin/sozo build
-          if [[ `git status --porcelain` ]]; then
-            echo The git repo is dirty
-            echo "Make sure to run \"sozo build\" after changing Scarb.toml"
-            exit 1
-          fi
+          cargo build -r --bin katana
+          cargo build -r --bin sozo
+          mkdir -p bins
+          cp ./target/release/katana bins/
+          cp ./target/release/sozo bins/
+      - uses: actions/upload-artifact@v4
+        with:
+          name: dojo-bins
+          path: bins
+  dojo-core-test:
+    needs: build
+    runs-on: ubuntu-latest
+    container:
+      image: ghcr.io/dojoengine/dojo-dev:e1c9597
+    steps:
+      - uses: actions/download-artifact@v4
+        with:
+          name: dojo-bins
+          path: /tmp/bins
+      - uses: actions/checkout@v3
+      - run: |
+          chmod +x /tmp/bins/sozo
+          /tmp/bins/sozo --manifest-path crates/dojo-core/Scarb.toml test
