--- a/.github/workflows/ci-contracts.yml
+++ b/.github/workflows/ci-contracts.yml
@@ -32,7 +32,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: asdf-vm/actions/plugins-add@v3
+      - uses: asdf-vm/actions/setup@v3
       - run: |
+          asdf plugin add dojo
+          asdf install dojo 1.0.0-alpha.4
           asdf global dojo 1.0.0-alpha.4
           sozo test
