--- a/.github/workflows/ci-contracts.yml
+++ b/.github/workflows/ci-contracts.yml
@@ -34,7 +34,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: asdf-vm/actions/setup@v3
       - run: |
-          asdf plugin add dojo
+          asdf plugin add dojo https://github.com/dojoengine/asdf-dojo
           asdf install dojo 1.0.0-alpha.4
           asdf global dojo 1.0.0-alpha.4
           sozo test
