try to fix build

--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -53,7 +53,7 @@ jobs:
           build-args: DOJO_VERSION=${{ env.DOJO_VERSION }}
           push: true
 #          FIXME: Currently arm64 is failing on node-gyp compilation
-          platforms: linux/amd64,linux/arm64/v8
+          platforms: linux/amd64,linux/arm64
           secrets: |
             DOJO_KEYSTORE_PASSWORD=${{ secrets.DOJO_KEYSTORE_PASSWORD }}
           tags: ${{ steps.meta.outputs.tags }}
