--- a/contracts/Scarb_deploy.toml
+++ b/contracts/Scarb_deploy.toml
@@ -9,7 +9,7 @@ edition = "2024_07"
 sierra-replace-ids = true
 
 [dependencies]
-dojo = { git = "https://github.com/dojoengine/dojo", tag = "v1.0.0-alpha.6" }
+dojo = { git = "https://github.com/dojoengine/dojo", tag = "v1.0.0-alpha.9" }
 
 
 [[target.dojo]]
@@ -17,3 +17,5 @@ build-external-contracts = []
 path = "../contracts/src/lib.cairo"
 
 [profile.dev-pop]
+
+[profile.slot]
