--- a/contracts/Scarb.toml
+++ b/contracts/Scarb.toml
@@ -9,6 +9,7 @@ edition = "2024_07"
 sierra-replace-ids = true
 
 [dependencies]
+#dojo = { git = "https://github.com/dojoengine/dojo", ref = "e42ce0c" }
 dojo = { git = "https://github.com/dojoengine/dojo", tag = "v1.0.0-alpha.9" }
 
 [lib]
