--- a/contracts/Scarb.toml
+++ b/contracts/Scarb.toml
@@ -11,8 +11,10 @@ sierra-replace-ids = true
 [dependencies]
 dojo = { git = "https://github.com/dojoengine/dojo", tag = "v1.0.0-alpha.11" }
 
-[lib]
+[tool.fmt]
+sort-module-level-items = true
 
+[lib]
 
 [profile.dev-pop]
 
