--- a/contracts/Scarb.toml
+++ b/contracts/Scarb.toml
@@ -15,6 +15,8 @@ dojo = { git = "https://github.com/dojoengine/dojo", tag = "v1.0.0-alpha.11" }
 sort-module-level-items = true
 
 [lib]
+# [[target.dojo]]
+
 
 [profile.dev-pop]
 
@@ -22,3 +24,4 @@ sort-module-level-items = true
 
 [scripts]
 init_auth = "./scripts/init_auth.sh"
+paint = "./scripts/paint.sh"
