--- a/contracts/Scarb.toml
+++ b/contracts/Scarb.toml
@@ -1,7 +1,7 @@
 [package]
 cairo-version = "=2.7.0"
 name = "pixelaw"
-version = "0.3.50"
+version = "0.4.4"
 homepage = "https://github.com/pixelaw/core"
 edition = "2024_07"
 
@@ -14,8 +14,8 @@ dojo = { git = "https://github.com/dojoengine/dojo", tag = "v1.0.0-alpha.17" }
 [tool.fmt]
 sort-module-level-items = true
 
-# [lib]
-[[target.dojo]]
+ [lib]
+#[[target.dojo]]
 
 
 [profile.dev-pop]
