--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -50,7 +50,9 @@ jobs:
       - uses: depot/build-push-action@v1
         with:
           context: .
-          build-args: DOJO_VERSION=${{ env.DOJO_VERSION }}
+          build-args: |
+            GENERATE_POPULATED_CORE=true
+            DOJO_VERSION=${{ env.DOJO_VERSION }}
           push: true
 #          FIXME: Currently arm64 is failing on node-gyp compilation
           platforms: linux/amd64,linux/arm64
