--- a/contracts/Scarb_deploy.toml
+++ b/contracts/Scarb_deploy.toml
@@ -1,5 +1,5 @@
 [package]
-cairo-version = "=2.7.0"
+cairo-version = "=2.8.4"
 name = "pixelaw"
 version = "0.4.7"
 homepage = "https://github.com/pixelaw/core"
@@ -9,7 +9,7 @@ edition = "2024_07"
 sierra-replace-ids = true
 
 [dependencies]
-dojo = { git = "https://github.com/dojoengine/dojo", tag = "v1.0.0-alpha.19" }
+dojo = { git = "https://github.com/dojoengine/dojo", tag = "v1.0.0-rc.1" }
 
 [tool.fmt]
 sort-module-level-items = true
@@ -22,6 +22,8 @@ build-external-contracts = []
 [profile.slot]
 
 [profile.sepolia]
+
+[profile.mainnet]
 
 [scripts]
 init = "./scripts/init.sh"
