--- a/contracts/Scarb.toml
+++ b/contracts/Scarb.toml
@@ -9,11 +9,11 @@ edition = "2024_07"
 sierra-replace-ids = true
 
 [dependencies]
-dojo = { git = "https://github.com/dojoengine/dojo", tag = "v1.0.0-rc.2" }
+dojo = { git = "https://github.com/dojoengine/dojo", tag = "v1.0.0" }
 starknet = "2.8.4"
 
 [dev-dependencies]
-dojo_cairo_test = { git = "https://github.com/dojoengine/dojo", tag = "v1.0.0-rc.2" }
+dojo_cairo_test = { git = "https://github.com/dojoengine/dojo", tag = "v1.0.0" }
 
 [tool.fmt]
 sort-module-level-items = true
