--- a/contracts/Scarb_deploy.toml
+++ b/contracts/Scarb_deploy.toml
@@ -1,7 +1,7 @@
 [package]
-cairo-version = "=2.7.0"
+cairo-version = "=2.8.4"
 name = "pixelaw"
-version = "0.4.7"
+version = "0.4.8"
 homepage = "https://github.com/pixelaw/core"
 edition = "2024_07"
 
@@ -9,19 +9,26 @@ edition = "2024_07"
 sierra-replace-ids = true
 
 [dependencies]
-dojo = { git = "https://github.com/dojoengine/dojo", tag = "v1.0.0-alpha.19" }
+dojo = { git = "https://github.com/dojoengine/dojo", tag = "v1.0.0" }
+starknet = "2.8.4"
+
+[dev-dependencies]
+dojo_cairo_test = { git = "https://github.com/dojoengine/dojo", tag = "v1.0.0" }
 
 [tool.fmt]
 sort-module-level-items = true
 
-[[target.dojo]]
-build-external-contracts = []
+[[target.starknet-contract]]
+sierra = true
+build-external-contracts = ["dojo::world::world_contract::world"]
 
 [profile.dev-pop]
 
 [profile.slot]
 
 [profile.sepolia]
+
+[profile.mainnet]
 
 [scripts]
 init = "./scripts/init.sh"
