--- a/test_helpers/Scarb.toml
+++ b/test_helpers/Scarb.toml
@@ -1,6 +1,6 @@
 [package]
 cairo-version = "=2.8.4"
-name = "pixelaw"
+name = "pixelaw_test_helpers"
 version = "0.5.4"
 homepage = "https://github.com/pixelaw/core"
 edition = "2024_07"
@@ -10,29 +10,16 @@ sierra-replace-ids = true
 
 [dependencies]
 dojo = { git = "https://github.com/dojoengine/dojo", tag = "v1.0.0" }
-starknet = "2.8.4"
-
-[dev-dependencies]
-pixelaw_test_helpers = { path = "../test_helpers" }
 dojo_cairo_test = { git = "https://github.com/dojoengine/dojo", tag = "v1.0.0" }
+starknet = "2.8.4"
 
 [tool.fmt]
 sort-module-level-items = true
+
+[lib]
 
 [[target.starknet-contract]]
 sierra = true
 build-external-contracts = ["dojo::world::world_contract::world"]
 
-[profile.dev-pop]
 
-[profile.slot]
-
-[profile.sepolia]
-
-[profile.mainnet]
-
-[scripts]
-init = "./scripts/init.sh"
-paint = "./scripts/paint.sh"
-paint_json = "./scripts/paint_json.sh"
-populate = "./scripts/populate.sh"
